# rust-hwi

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  clippy.toml  dockerfile  get_hwi.sh  requirements.txt
.github/workflows/: main.yml
ci/: Dockerfile.coldcard  Dockerfile.ledger  Dockerfile.trezor  automation.json
src/: commands.rs  error.rs  implementations.rs  interface.rs  lib.rs  signer.rs  types.rs
src/implementations/: binary_implementation.rs  python_implementation.rs
