[package]
name = "hwi"
version = "0.6.0"
authors = ["Daniela Brozzoni <danielabrozzoni@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Rust wrapper for the Bitcoin Core Hardware Wallet Interface."
repository = "https://github.com/bitcoindevkit/rust-hwi"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29.1", features = ["serde", "base64"] }
miniscript = { version = "9.0", features = ["serde"], optional = true }
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
pyo3 = { version = "0.15.1", features = ["auto-initialize"] }
base64 = "0.13.0"
once_cell = { version = "=1.14", optional = true }

[dev-dependencies]
serial_test = "0.6.0"

[features]
doctest = []
use-miniscript = ["miniscript"]
msrv1411 = ["once_cell"]
